# panelizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture-decisions.md  bdreader-analysis.md  cape-analysis.md  comic-smart-panels-analysis.md  comic-trim-analysis.md  comixology-analysis.md  cv-algorithm.md  deeppanel-analysis.md  kumiko-analysis.md  magi-analysis.md  marvel-smart-panels-analysis.md  panels-app-analysis.md  sam-comic-analysis.md  smart-comic-reader-analysis.md  tools-analysis.md  yolov12-analysis.md
docs/agent/: workflow.md
src/panel_flow/: __main__.py
src/panel_flow/cv/: __init__.py  detector.py  panel_internal.py  pipeline.py  segment.py
src/panel_flow/extraction/: __init__.py  extractor.py
src/panel_flow/schema/: models.py
src/panelizer/: __main__.py  ordering.py
src/panelizer/cv/: __init__.py  confidence.py  debug.py  detector.py  panel_internal.py  pipeline.py
src/panelizer/extraction/: extractor.py  utils.py
src/panelizer/ml/: __init__.py  base.py  exceptions.py  model_manager.py  yolo_detector.py
src/panelizer/preview/: __init__.py  server.py
src/panelizer/preview/static/: app.js  index.html  styles.css
src/panelizer/schema/: __init__.py  models.py
tests/: test_cli.py  test_cv.py  test_cv_postprocess.py  test_extraction.py  test_ml.py  test_ml_integration.py  test_ordering.py  test_schema.py  test_smoke.py  test_viewer_server.py
