[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panel-flow"
version = "0.0.0"
description = "Panel-by-panel comic reader with human-in-the-loop detection"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "Pillow>=10.4.0",
  "pymupdf>=1.24.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=2.1.0",
  "click>=8.1.0",
]

[project.scripts]
panel-flow = "panel_flow.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.385",
  "twine>=5.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.385",
  "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/panel_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=panel_flow --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["panel_flow"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
  "**/__pycache__",
  ".git",
  ".venv",
  "build",
  "dist",
  ".pytest_cache",
  ".ruff_cache",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
venvPath = "."
venv = ".venv"
